# python-project-lvl1

./: .gitignore  README.md  pyproject.toml
.github/workflows/: hexlet-check.yml  main.yml
brain_games/: cli.py  game_engine.py  game_main.py  user.py
brain_games/game_main/: cli.py  engine_functions.py  game_calc.py  game_engine.py  game_even.py  game_gcd.py  game_prime.py  game_progression.py  user.py  user_calc.py  user_prime.py  user_prog.py
brain_games/game_main/games/: game_calc.py  game_even.py  game_gcd.py  game_prime.py  game_progression.py
brain_games/games/: calc.py  even.py  game_calc.py  game_even.py  game_gcd.py  game_prime.py  game_progression.py  gcd.py  prime.py  progression.py
brain_games/scripts/: __init__.py  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
saiweb5_brain_games.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
