[tool.poetry]
name = "SaiWeb5_brain_games"
version = "0.1.3"
description = ""
authors = ["Andrey <OniSairento5@yandex.ru>"]
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
brain-even = "brain_games.scripts.brain_even:main"

[[tool.poetry.source]]
name = "saiweb_test"
url = "https://test.pypi.org/legacy/"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

